Use settings for imaginary

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -21,3 +21,5 @@ PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_LABEL="WebP‐Qualität"
 PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_DESC="Qualitätseinstellung für WebP‐Dateien im Bereich von 0 bis 100, wobei kleinere Werte zu kleineren Dateien führen und höhere Werte qualitativ bessere Bilder erzeugen."
 PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_LABEL="JPEG‐Qualität"
 PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_DESC="Qualitätseinstellung für JPEG‐Dateien im Bereich von 0 bis 100, wobei kleinere Werte zu kleineren Dateien führen und höhere Werte qualitativ bessere Bilder erzeugen."
+PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Metadaten entfernen"
+PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Entferne Metadaten wie EXIF von den erstellten Bildern."
