--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -21,3 +21,5 @@ PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_LABEL="WebP quality"
 PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_DESC="Quality setting for WebP files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality."
 PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_LABEL="JPEG quality"
 PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_DESC="Quality setting for JPEG files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality."
+PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Strip metadata"
+PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Strip the metadata like EXIF from the generated images."
