Use subform to set image formats to generate

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -14,12 +14,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_DESC="Pfadpräfix des Imaginary‐Die
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_LABEL="Imaginary‐Token"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_DESC="Optionales vom Imaginary‐Dienst zur Authentifiziertung verlangtes Token."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_LABEL="Bildformate"
-PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="Die vom Konverter zu erstellenden Bildformate. Sie können mehrere Formate auswählen, um auch ältere Browser zu unterstützen."
-PLG_CONTENT_HBNIMAGES_FIELD_AFIV_QUALITY_LABEL="AFIV‐Qualität"
-PLG_CONTENT_HBNIMAGES_FIELD_AFIV_QUALITY_DESC="Qualitätseinstellung für AVIF‐Dateien im Bereich von 0 bis 100, wobei kleinere Werte zu kleineren Dateien führen und höhere Werte qualitativ bessere Bilder erzeugen. Eine Qualität von 100 führt zu verlustfreier Kodierung."
-PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_LABEL="WebP‐Qualität"
-PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_DESC="Qualitätseinstellung für WebP‐Dateien im Bereich von 0 bis 100, wobei kleinere Werte zu kleineren Dateien führen und höhere Werte qualitativ bessere Bilder erzeugen."
-PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_LABEL="JPEG‐Qualität"
-PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_DESC="Qualitätseinstellung für JPEG‐Dateien im Bereich von 0 bis 100, wobei kleinere Werte zu kleineren Dateien führen und höhere Werte qualitativ bessere Bilder erzeugen."
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="Die vom Konverter zu erstellenden Bildformate. Sie können mehrere Formate hinzufügen und sie werden in der hier gespeicherten Reihenfolge erstellt."
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_LABEL="Format"
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_DESC=""
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Qualiät"
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Qualitätseinstellung für die erstellten Dateien im Bereich von 0 bis 100 wobei niedrigere Werte zu kleineren Dateien und höhere Werte zu besserer Qualität führen. Für AVIF bedeutet eine Qualität von 100 eine verlustfreie Kompression."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Metadaten entfernen"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Entferne Metadaten wie EXIF von den erstellten Bildern."
