--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -14,12 +14,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_DESC="Path prefix of the imaginary se
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_LABEL="Imaginary token"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_DESC="Optional authentication token required by the imaginary service if configured there."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_LABEL="Image formats"
-PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="The image file formats that should be created by the converter. You can select multiple formats to also support older browsers."
-PLG_CONTENT_HBNIMAGES_FIELD_AFIV_QUALITY_LABEL="AFIV quality"
-PLG_CONTENT_HBNIMAGES_FIELD_AFIV_QUALITY_DESC="Quality setting for AVIF files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality. A quality of 100 means lossless."
-PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_LABEL="WebP quality"
-PLG_CONTENT_HBNIMAGES_FIELD_WEBP_QUALITY_DESC="Quality setting for WebP files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality."
-PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_LABEL="JPEG quality"
-PLG_CONTENT_HBNIMAGES_FIELD_JPEG_QUALITY_DESC="Quality setting for JPEG files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality."
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="The image file formats that should be created by the converter. You can add multiple formats and they will be generated in the order set here."
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_LABEL="Format"
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_DESC=""
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Quality"
+PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Quality setting for the generated files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality. For AVIF, a quality of 100 means lossless."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Strip metadata"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Strip the metadata like EXIF from the generated images."
