Add more config fields and translation strings

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -21,3 +21,22 @@ PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Qualiät"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Qualitätseinstellung für die erstellten Dateien im Bereich von 0 bis 100 wobei niedrigere Werte zu kleineren Dateien und höhere Werte zu besserer Qualität führen. Für AVIF bedeutet eine Qualität von 100 eine verlustfreie Kompression."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Metadaten entfernen"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Entferne Metadaten wie EXIF von den erstellten Bildern."
+
+COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Kontextoptionen"
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Kontext"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_LABEL="Kontextname"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_LABEL="Klassen"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CLASS_LABEL="Klassenname"
+
+PLG_CONTENT_HBNIMAGES_FIELD_WIDTHS_LABEL="Breiten"
+
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_LABEL="Bildbreite (px)"
+
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_LABEL="Min‐/Max‐Medienabfrage"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MIN="Mindestens (min-width)"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MAX="Maximal (max-width)"
+
+PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_LABEL="Medienbreite (px)"
