--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -21,3 +21,22 @@ PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Quality"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Quality setting for the generated files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality. For AVIF, a quality of 100 means lossless."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Strip metadata"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Strip the metadata like EXIF from the generated images."
+
+COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Context options"
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Context"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_LABEL="Context name"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_LABEL="Classes"
+
+PLG_CONTENT_HBNIMAGES_FIELD_CLASS_LABEL="Class name"
+
+PLG_CONTENT_HBNIMAGES_FIELD_WIDTHS_LABEL="Widths"
+
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_LABEL="Image width"
+
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_LABEL="Min/Max media query"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MIN="Minimum (min-width)"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MAX="Maximum (max-width)"
+
+PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_LABEL="Media width"
