Add more description texts

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -4,7 +4,9 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_LABEL="Konverter"
-PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_DESC="Der zum Verkleinern und Konvertieren der Bilder genutzte Konverter. Imaginary (https://github.com/h2non/imaginary) ist ein externer aber selbst betreibbarer Dienst. Falls verfügbar ist er die schnellste Option. Die Joomla-Option nutzt die internen von Joomla bereitgestellten Methoden, welche die GD-Bibliothek verwenden. Diese Methode ist langsam und dient als Rückfalloption."
+PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_DESC="Der zum Verkleinern und Konvertieren der Bilder genutzte Konverter."
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HEADER_LABEL="Imaginary"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HEADER_DESC="Benutzt Imaginary (https://github.com/h2non/imaginary), einen externen aber selbst betreibbaren Dienst. Falls verfügbar ist er die schnellste Option, unterstützt aber keine Konvertierung zu AFIV‐Dateien. Falls ein Fehler auftritt wird auf ImageMagick zurückgegriffen."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HOST_LABEL="Imaginary‐Host"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HOST_DESC="Adresse des Hostrechners auf dem der Imaginary‐Dienst läuft."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PORT_LABEL="Imaginary‐Port"
@@ -13,6 +15,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_LABEL="Imaginary‐Pfad"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_DESC="Pfadpräfix des Imaginary‐Diensts. Standarmäßig ist kein Präfix eingestellt und die API‐Routen von Imaginary beginnen an der Wurzel (“/”)."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_LABEL="Imaginary‐Token"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_DESC="Optionales vom Imaginary‐Dienst zur Authentifiziertung verlangtes Token."
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGICK_HEADER_LABEL="Imagick"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGICK_HEADER_DESC="Benutzt die Imagick‐PHP‐Erweiterung für ImageMagick (https://imagemagick.org/) falls verfügbar. Falls ein Fehler auftritt wird auf die internen Joomla‐Funktionen zurückgegriffen."
+PLG_CONTENT_HBNIMAGES_FIELD_JIMAGE_HEADER_LABEL="Joomla Image"
+PLG_CONTENT_HBNIMAGES_FIELD_JIMAGE_HEADER_DESC="Benutzt die internen Joomla‐Funktionen zur Bildbearbeitung."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_LABEL="Bildformate"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="Die vom Konverter zu erstellenden Bildformate. Sie können mehrere Formate hinzufügen und sie werden in der hier gespeicherten Reihenfolge erstellt."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_LABEL="Format"
@@ -26,17 +32,33 @@ COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Kontextoptionen"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Kontext"
 
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_LABEL="Kontextname"
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_DESC="Der Name des Kontexts (wie com_content.article) für den die folgende Konfiguration gülit ist. Sie können „default“ als Name verwenden um eine allgemeine Konfiguration für Kontexte zu erstellen, für die es keine eigene Konfiguration gibt."
 
 PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_LABEL="Klassen"
+PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_DESC="Klassen von img‐Tags für die die Konfiguration angewendet wird. Sie können eine „default“‐Klasse erstellen die für Bilder verwendet wird, die keine passende Klasse gesetzt haben."
 
 PLG_CONTENT_HBNIMAGES_FIELD_CLASS_LABEL="Klassenname"
+PLG_CONTENT_HBNIMAGES_FIELD_CLASS_DESC="Der mit einem img‐Tag assoziierte Klassenname. Wenn der Klassenname bei einem img‐Tag gefunden wird, wird die folgende Konfiguration angewendet."
 
 PLG_CONTENT_HBNIMAGES_FIELD_WIDTHS_LABEL="Breiten"
+PLG_CONTENT_HBNINAMGES_FIELD_WIDTHS_DESC="Die verschiedenen zu erstellenden Bildbreiten zusammen mit den Medienabfragen, für die sie genutzt werden sollen."
 
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_LABEL="Bildbreite (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_DESC="Die Breite auf die das Biler verkleinert werden soll."
 
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_LABEL="Min‐/Max‐Medienabfrage"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_DESC="Medienabfrage zur Auswahl des passenden Bildes."
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MIN="Mindestens (min-width)"
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MAX="Maximal (max-width)"
 
 PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_LABEL="Medienbreite (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_DESC="Breite des Ausgabemediums für die das erstellte Bild genutzt wird."
+
+COM_PLUGINS_LIGHTBOXSETTING_FIELDSET_LABEL="Lightbox"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_LABEL="Lightbox"
+
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_NONE="Keine"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Verknüpfe Originalbild"
+
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Verknüpfe Originalbild"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="Dies ist keine echte Lightbox sondern einfach nur eine Verküpfung zum Originalbild oder optional zu einer verkleinerten Version."
