--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -4,7 +4,9 @@
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_LABEL="Converter"
-PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_DESC="Converter used to resize and convert the images. Imaginary (https://github.com/h2non/imaginary) is an extern but self hostable service. If available for you, this is the fastest option. The Joomla option uses the internal method provided by Joomla using the GD library. This is quite slow and acts as a last resort."
+PLG_CONTENT_HBNIMAGES_FIELD_CONVERTER_DESC="Converter used to resize and convert the images."
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HEADER_LABEL="Imaginary"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HEADER_DESC="Uses Imaginary (https://github.com/h2non/imaginary), an extern but self hostable service. If available for you, this is the fastest option but it lacks support for generating AVIF images. If it fails, it will fall back to ImageMagick."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HOST_LABEL="Imaginary host"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_HOST_DESC="Host address the imaginary service runs on."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PORT_LABEL="Imaginary port"
@@ -13,6 +15,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_LABEL="Imaginary path"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_PATH_DESC="Path prefix of the imaginary service. By default, there ist no path prefix and the API routes of imaginary start at the root (“/”)."
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_LABEL="Imaginary token"
 PLG_CONTENT_HBNIMAGES_FIELD_IMAGINARY_TOKEN_DESC="Optional authentication token required by the imaginary service if configured there."
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGICK_HEADER_LABEL="Imagick"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGICK_HEADER_DESC="Uses the Imagick PHP extension for ImageMagick (https://imagemagick.org/) if available. If it fails, it will fall back to Joomla Image."
+PLG_CONTENT_HBNIMAGES_FIELD_JIMAGE_HEADER_LABEL="Joomla Image"
+PLG_CONTENT_HBNIMAGES_FIELD_JIMAGE_HEADER_DESC="Uses the internal Joomla image converter methods."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_LABEL="Image formats"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_DESC="The image file formats that should be created by the converter. You can add multiple formats and they will be generated in the order set here."
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_TYPE_LABEL="Format"
@@ -26,17 +32,33 @@ COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Context options"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Context"
 
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_LABEL="Context name"
+PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_NAME_DESC="The name of the context (like com_content.article) for that the following configuration is valid. You can use “default“ as name to create a general configuration for contexts that have no own configuration."
 
 PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_LABEL="Classes"
+PLG_CONTENT_HBNIMAGES_FIELD_CLASSES_DESC="Classes from img tags for that the configurations will be applied. You can create a „default“ class configuration that will be applied to images that have no fitting class."
 
 PLG_CONTENT_HBNIMAGES_FIELD_CLASS_LABEL="Class name"
+PLG_CONTENT_HBNIMAGES_FIELD_CLASS_DESC="The name of the class associated with an img tag. If that class name is found for an img tag, the following configuration will be applied."
 
 PLG_CONTENT_HBNIMAGES_FIELD_WIDTHS_LABEL="Widths"
+PLG_CONTENT_HBNINAMGES_FIELD_WIDTHS_DESC="The different image widths that should be generated together with the media queries they should be used for."
 
-PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_LABEL="Image width"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_LABEL="Image width (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_IMAGEWIDTH_DESC="The width to which the image should be resized."
 
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_LABEL="Min/Max media query"
+PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_DESC="Media query used to select the appropriate image."
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MIN="Minimum (min-width)"
 PLG_CONTENT_HBNIMAGES_FIELD_MINMAX_VAL_MAX="Maximum (max-width)"
 
-PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_LABEL="Media width"
+PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_LABEL="Media width (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_DESC="Width of the output media for that the generated image will be used."
+
+COM_PLUGINS_LIGHTBOXSETTING_FIELDSET_LABEL="Lightbox"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_LABEL="Lightbox"
+
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_NONE="None"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Link original image"
+
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Link original image"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="This is not a real lightbox but a simple link to the original, or, if enabled, resized image."
