Implement linkt to original image

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -56,9 +56,16 @@ PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_DESC="Breite des Ausgabemediums für die 
 
 COM_PLUGINS_LIGHTBOXSETTING_FIELDSET_LABEL="Lightbox"
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_LABEL="Lightbox"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_DESC="Füge eine Verknüpfung zum Originalbild hinzu oder benutze eine Lightbox zum Anzeigen des vollen Bildes."
 
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_NONE="Keine"
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Verknüpfe Originalbild"
 
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Verknüpfe Originalbild"
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="Dies ist keine echte Lightbox sondern einfach nur eine Verküpfung zum Originalbild oder optional zu einer verkleinerten Version."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_LABEL="Größe anpassen"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_DESC="Falls aktiviert wird die Größe des Bildes für die Vollanzeige angepasst."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_LABEL="Maximale Breite (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_DESC="Das Bild wird auf diese Breite angepasst wenn es breiter als hoch ist."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_LABEL="Maximale Höhe (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_DESC="Das Bild wird auf diese Höhe angepasst wenn es höher als breit ist."
