--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -56,9 +56,16 @@ PLG_CONTENT_HBNIMAGES_FIELD_MEDIAWIDTH_DESC="Width of the output media for that 
 
 COM_PLUGINS_LIGHTBOXSETTING_FIELDSET_LABEL="Lightbox"
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_LABEL="Lightbox"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_DESC="Add a link to the original image or use a lightbox to display the full image."
 
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_NONE="None"
 PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Link original image"
 
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Link original image"
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="This is not a real lightbox but a simple link to the original, or, if enabled, resized image."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_LABEL="Resize"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_DESC="If yes, the original image will be resized for full display."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_LABEL="Maximum width (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_DESC="The image will be resized to this width if the width is greater than the height."
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_LABEL="Maximum height (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_DESC="The image will be resized to this height if the height is greate than the width."
