Add support for JCE MediaBox 2

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -63,9 +63,17 @@ PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Verknüpfe Originalbild"
 
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Verknüpfe Originalbild"
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="Dies ist keine echte Lightbox sondern einfach nur eine Verküpfung zum Originalbild oder optional zu einer verkleinerten Version."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_LABEL="Größe anpassen"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_DESC="Falls aktiviert wird die Größe des Bildes für die Vollanzeige angepasst."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_LABEL="Maximale Breite (px)"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_DESC="Das Bild wird auf diese Breite angepasst wenn es breiter als hoch ist."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_LABEL="Maximale Höhe (px)"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_DESC="Das Bild wird auf diese Höhe angepasst wenn es höher als breit ist."
+PLG_CONTENT_HBNIMAGES_FIELD_JCEMEDIABOX_HEADER_LABEL="JCE MediaBox 2"
+PLG_CONTENT_HBNIMAGES_FIELD_JCEMEDIABOX_HEADER_DESC="Benutzt JCE MediaBox 2 (https://www.joomlacontenteditor.net/) als Lightbox. Das Plugin für die JCE MediaBox 2 muss aktiviert sein. Dieses Plugin fügt nur die benötigten HTML‐Klassen hinzu."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_GALLERY_LABEL="Galerie"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_GALLERY_DESC="Füge alle gefundenen Bilder einer Lightbox‐Galerie hinzu."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_RESIZE_LABEL="Größe anpassen"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_RESIZE_DESC="Falls aktiviert wird die Größe des Bildes für die Vollanzeige angepasst."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_TYPE_LABEL="Format"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_TYPE_DESC="Ausgabeformat für das erstellte Lightbox‐Bild."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_QUALITY_LABEL="Qualität"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_QUALITY_DESC="Qualitätseinstellung für das erstellte Lightbox‐Bild im Bereich von 0 bis 100 wobei niedrigere Werte zu kleineren Dateien und höhere Werte zu besserer Qualität führen. Für AVIF bedeutet eine Qualität von 100 eine verlustfreie Kompression."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_WIDTH_LABEL="Maximale Breite (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_WIDTH_DESC="Das Bild wird auf diese Breite angepasst wenn es breiter als hoch ist."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_HEIGHT_LABEL="Maximale Höhe (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_HEIGHT_DESC="Das Bild wird auf diese Höhe angepasst wenn es höher als breit ist."
