--- a/language/de-DE/plg_content_hbnimages.sys.ini
+++ b/language/de-DE/plg_content_hbnimages.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_HBNIMAGES="HBN Bildverkleinerer"
+PLG_CONTENT_HBNIMAGES="Inhalt - HBN Bildverkleinerer"
 PLG_CONTENT_HBNIMAGES_DESCRIPTION="Verkleinert Bilder im Inhalt."
