--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -63,9 +63,17 @@ PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_VAL_LINK="Link original image"
 
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_LABEL="Link original image"
 PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEADER_DESC="This is not a real lightbox but a simple link to the original, or, if enabled, resized image."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_LABEL="Resize"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_RESIZE_DESC="If yes, the original image will be resized for full display."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_LABEL="Maximum width (px)"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_WIDTH_DESC="The image will be resized to this width if the width is greater than the height."
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_LABEL="Maximum height (px)"
-PLG_CONTENT_HBNIMAGES_FIELD_LINK_HEIGHT_DESC="The image will be resized to this height if the height is greate than the width."
+PLG_CONTENT_HBNIMAGES_FIELD_JCEMEDIABOX_HEADER_LABEL="JCE MediaBox 2"
+PLG_CONTENT_HBNIMAGES_FIELD_JCEMEDIABOX_HEADER_DESC="Uses JCE MediaBox 2 (https://www.joomlacontenteditor.net/) to add a lightbox. The JCE MediaBox 2 plugin has to be enabled. This will only add the required HTML markup."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_GALLERY_LABEL="Gallery"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_GALLERY_DESC="Add all found images to a lightbox gallery."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_RESIZE_LABEL="Resize"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_RESIZE_DESC="If yes, the original image will be resized for full display."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_TYPE_LABEL="Format"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_TYPE_DESC="Image format for the resized lightbox image."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_QUALITY_LABEL="Quality"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_QUALITY_DESC="Quality setting for the generated lightbox image in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality. For AVIF, a quality of 100 means lossless."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_WIDTH_LABEL="Maximum width (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_WIDTH_DESC="The image will be resized to this width if the width is greater than the height."
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_HEIGHT_LABEL="Maximum height (px)"
+PLG_CONTENT_HBNIMAGES_FIELD_LIGHTBOX_HEIGHT_DESC="The image will be resized to this height if the height is greate than the width."
