--- a/language/en-GB/plg_content_hbnimages.sys.ini
+++ b/language/en-GB/plg_content_hbnimages.sys.ini
@@ -3,5 +3,5 @@
 ; License GNU General Public License version 2 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_CONTENT_HBNIMAGES="HBN Image Resizer"
+PLG_CONTENT_HBNIMAGES="Content - HBN Image Resizer"
 PLG_CONTENT_HBNIMAGES_DESCRIPTION="Creates smaller content images."
