Add support for excluding specific image types by extension

--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -27,6 +27,8 @@ PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Quality"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Quality setting for the generated files in the range of 0 to 100 where lower values mean smaller files and higher values mean better quality. For AVIF, a quality of 100 means lossless."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Strip metadata"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Strip the metadata like EXIF from the generated images."
+PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_LABEL="Excluded types"
+PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_DESC="Comma separated list of file type extensions that will be excluded from resizing."
 
 COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Context options"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Context"
