--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -27,6 +27,8 @@ PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_LABEL="Qualiät"
 PLG_CONTENT_HBNIMAGES_FIELD_TYPES_QUALITY_DESC="Qualitätseinstellung für die erstellten Dateien im Bereich von 0 bis 100 wobei niedrigere Werte zu kleineren Dateien und höhere Werte zu besserer Qualität führen. Für AVIF bedeutet eine Qualität von 100 eine verlustfreie Kompression."
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Metadaten entfernen"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Entferne Metadaten wie EXIF von den erstellten Bildern."
+PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_LABEL="Ausgeschlossene Type"
+PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_DESC="Durch Kommata getrennte Liste von Dateinamenserweiterungen, die von der Verarbeitung ausgeschlossen werden."
 
 COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Kontextoptionen"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Kontext"
