Implement thumbnail creation on upload

--- a/language/de-DE/plg_content_hbnimages.ini
+++ b/language/de-DE/plg_content_hbnimages.ini
@@ -1,5 +1,5 @@
 ; Plugin HbnImages
-; (C) 2024 Matthias Fehring <https://www.huessenbergnetz.de>
+; (C) 2024-2025 Matthias Fehring <https://www.huessenbergnetz.de>
 ; License GNU General Public License version 2 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -29,6 +29,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Metadaten entfernen"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Entferne Metadaten wie EXIF von den erstellten Bildern."
 PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_LABEL="Ausgeschlossene Type"
 PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_DESC="Durch Kommata getrennte Liste von Dateinamenserweiterungen, die von der Verarbeitung ausgeschlossen werden."
+PLG_CONTENT_HBNIMAGES_FIELD_CREATETHUMBSONUPLOAD_LABEL="Beim Hochladen erstellen"
+PLG_CONTENT_HBNIMAGES_FIELD_CREATETHUMBSONUPLOAD_DESC="Erstelle die Vorschaubilder bereits beim Hochladen."
+PLG_CONTENT_HBNIMAGES_FIELD_ADDITIONALWIDTHS_LABEL="Zusätzliche Breiten"
+PLG_CONTENT_HBNIMAGES_FIELD_ADDITIONALWIDTHS_DESC="Erstelle beim Hochladen Vorschaubilder für zusätzliche Breiten. Standardmäßig werden nur Breiten für definierte Kontexte und Klassen erstellt. Dies sollte eine durch Kommanta getrennte Liste ganzzahliger Werte sein."
 
 COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Kontextoptionen"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Kontext"
