--- a/language/en-GB/plg_content_hbnimages.ini
+++ b/language/en-GB/plg_content_hbnimages.ini
@@ -1,5 +1,5 @@
 ; Plugin HbnImages
-; (C) 2024 Matthias Fehring <https://www.huessenbergnetz.de>
+; (C) 2024-2025 Matthias Fehring <https://www.huessenbergnetz.de>
 ; License GNU General Public License version 2 or later; see LICENSE
 ; Note : All ini files need to be saved as UTF-8
 
@@ -29,6 +29,10 @@ PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_LABEL="Strip metadata"
 PLG_CONTENT_HBNIMAGES_FIELD_STRIPMETADATA_DESC="Strip the metadata like EXIF from the generated images."
 PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_LABEL="Excluded types"
 PLG_CONTENT_HBNIMAGES_FIELD_EXCLUDEDEXTS_DESC="Comma separated list of file type extensions that will be excluded from resizing."
+PLG_CONTENT_HBNIMAGES_FIELD_CREATETHUMBSONUPLOAD_LABEL="Create on upload"
+PLG_CONTENT_HBNIMAGES_FIELD_CREATETHUMBSONUPLOAD_DESC="Create thumbnails on upload.."
+PLG_CONTENT_HBNIMAGES_FIELD_ADDITIONALWIDTHS_LABEL="Additional widths"
+PLG_CONTENT_HBNIMAGES_FIELD_ADDITIONALWIDTHS_DESC="Create thumbnails for additional widths on upload. By default, thumbnails will only be created for the widhts defined by contexts and classes. This should be a comma separated list of integer values."
 
 COM_PLUGINS_CONTEXTOPTIONS_FIELDSET_LABEL="Context options"
 PLG_CONTENT_HBNIMAGES_FIELD_CONTEXT_LABEL="Context"
